--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.0.20-8",
+    "@builder.io/qwik": "0.0.21",
     "@types/eslint": "8.4.2",
     "@types/express": "4.17.13",
     "@types/node": "17.0.34",
