--- a/package.json
+++ b/package.json
@@ -7,16 +7,16 @@
     "build.ssr": "vite build --ssr src/entry.express.tsx",
     "dev": "vite",
     "dev.debug": "node --inspect-brk node_modules/vite/bin/vite.js",
-    "dev.ssr": "vite --mode ssr",
+    "dev.ssr": "node --inspect node_modules/vite/bin/vite.js --mode ssr",
     "fmt": "prettier --write .",
     "fmt.check": "prettier --check .",
     "lint": "eslint \"**/*.ts*\"",
-    "serve": "node server/entry.express.js",
+    "serve": "node --inspect server/entry.express.js",
     "start": "npm run dev",
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.0.21",
+    "@builder.io/qwik": "0.0.24",
     "@types/eslint": "8.4.2",
     "@types/express": "4.17.13",
     "@types/node": "17.0.34",
