--- a/package.json
+++ b/package.json
@@ -16,22 +16,17 @@
     "typecheck": "tsc --noEmit"
   },
   "devDependencies": {
-    "@builder.io/qwik": "0.0.34",
-    "@types/eslint": "8.4.2",
-    "@types/express": "4.17.13",
-    "@types/node": "17.0.34",
-    "@typescript-eslint/eslint-plugin": "5.25.0",
-    "@typescript-eslint/parser": "5.25.0",
-    "autoprefixer": "10.4.7",
-    "eslint": "8.15.0",
-    "eslint-plugin-qwik": "latest",
-    "express": "4.17.3",
-    "node-fetch": "2.6.7",
-    "postcss": "8.4.13",
-    "prettier": "2.6.2",
-    "tailwindcss": "3.0.24",
-    "typescript": "4.6.4",
-    "vite": "2.9.9"
+    "@types/eslint": "8.4.10",
+    "@types/node": "latest",
+    "@typescript-eslint/eslint-plugin": "5.43.0",
+    "@typescript-eslint/parser": "5.43.0",
+    "eslint": "8.28.0",
+    "eslint-plugin-qwik": "^0.16.2",
+    "node-fetch": "3.3.0",
+    "prettier": "2.7.1",
+    "typescript": "4.9.3",
+    "vite": "^4.0.4",
+    "vite-tsconfig-paths": "^4.0.3"
   },
   "engines": {
     "node": ">=14"
@@ -40,6 +35,8 @@
   "license": "",
   "private": true,
   "dependencies": {
-    "url-router": "^13.0.0"
+    "@builder.io/qwik": "^0.20.1",
+    "@builder.io/qwik-city": "^0.5.2",
+    "undici": "^5.16.0"
   }
 }
